# pskr-ha-bridge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.py  docker-compose.yaml  hacs.json  pskr-ha-bridge.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: hacs-validation.yml  hassfest.yml  ruff.yml
custom_components/pskr/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/pskr/translations/: en.json
docs/wiki/: Dashboard-Examples.md  Home.md  PSKReporter-Data.md  Troubleshooting.md
examples/: dashboard_docker_mushroom.yaml
tests/: test_config.py
