[project]
name = "pskr-ha-bridge"
version = "2.0.0"
description = "Bridge amateur radio spot data from PSKReporter.info to Home Assistant"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pentafive"}
]
requires-python = ">=3.9"
keywords = ["home-assistant", "mqtt", "amateur-radio", "pskreporter", "hacs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["config", "custom_components.pskr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
